--- a/error.html
+++ b/error.html
@@ -86,52 +86,43 @@
 							<a href="./posts/./lekarstvo-nomer-1---chesnok.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1411</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1424</span>
 								</div>
-								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87635143_1618628091609959_6149851510081857034_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=UpBQm75ouL0AX9dpffG&oh=543f1beb72b979eac7ff769c011d13e3&oe=5EA49860" alt="ЛЕКАРСТВО НОМЕР 1 - ЧЕСНОК">
+								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87635143_1618628091609959_6149851510081857034_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=WZyFdtHGgdwAX9czWkQ&oh=02dc0ad4f1d92909d07b7edf6da3ce28&oe=5EA49860" alt="ЛЕКАРСТВО НОМЕР 1 - ЧЕСНОК">
 							</div>
 							<div class="article-more__item-name">ЛЕКАРСТВО НОМЕР 1 - ЧЕСНОК</div>
-						</a>
-							<a href="./posts/./xx.html" class="article-more__item">
-							<div class="article-more__item-pic">
-								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1378</span>
-								</div>
-								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87885072_615474182628043_9134810011648972258_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=bHxQMCgI2HAAX9tPWMz&oh=b9812ce6053ca97fe6ba99b05574d90b&oe=5E9A725D" alt="❤️">
-							</div>
-							<div class="article-more__item-name">❤️</div>
 						</a>
 							<a href="./posts/./gde-naytix-zashchitu-ot-virusov.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1288</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1290</span>
 								</div>
 								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87861832_625370131360615_7022457707105560149_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=dN2jlnxLg1MAX_bdSsT&oh=6e83fee2441cb63e047d91f80d624396&oe=5EA5DF27" alt="ГДЕ НАЙТИ  ЗАЩИТУ ОТ ВИРУСОВ">
 							</div>
 							<div class="article-more__item-name">ГДЕ НАЙТИ  ЗАЩИТУ ОТ ВИРУСОВ</div>
 						</a>
-							<a href="./posts/./koshachiy-kogot--xcatxs.html" class="article-more__item">
-							<div class="article-more__item-pic">
-								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1156</span>
-								</div>
-								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87479961_498275437794629_462639628797701000_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=899OomM51rwAX8RyC9C&oh=180fbf9e60a0e7de6d90cf260d9a31a4&oe=5E9A88FA" alt="КОШАЧИЙ КОГОТЬ (Cat’s">
-							</div>
-							<div class="article-more__item-name">КОШАЧИЙ КОГОТЬ (Cat’s</div>
-						</a>
 							<a href="./posts/./ob-osnovnykh-dobavkakhx-aktual-nykh.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1086</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1247</span>
 								</div>
 								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89358555_508706659837209_8897498237617732213_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=M_P-qFSFuxQAX9nFghO&oh=c67cedc931259012bf66738c37f94f35&oe=5EA66D83" alt="ОБ ОСНОВНЫХ ДОБАВКАХ, актуальных">
 							</div>
 							<div class="article-more__item-name">ОБ ОСНОВНЫХ ДОБАВКАХ, актуальных</div>
 						</a>
+							<a href="./posts/./koshachiy-kogot--xcatxs.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1163</span>
+								</div>
+								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87479961_498275437794629_462639628797701000_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=899OomM51rwAX8RyC9C&oh=180fbf9e60a0e7de6d90cf260d9a31a4&oe=5E9A88FA" alt="КОШАЧИЙ КОГОТЬ (Cat’s">
+							</div>
+							<div class="article-more__item-name">КОШАЧИЙ КОГОТЬ (Cat’s</div>
+						</a>
 							<a href="./posts/./retsept-bezzhirovogo-sousa.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1074</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1077</span>
 								</div>
 								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/88197176_102353821338258_4063892763466591489_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=CVIwElpAbDsAX8S1302&oh=02063c4048aaa11452d63fdec227d420&oe=5EA3BA22" alt="РЕЦЕПТ БЕЗЖИРОВОГО СОУСА">
 							</div>
@@ -140,20 +131,29 @@
 							<a href="./posts/./shpinatxxx.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>914</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>931</span>
 								</div>
-								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89385356_221989658951830_6343720088222175732_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=UeO3Wfm5oGIAX8mMLlo&oh=aa47285ab1071c95fd513af78c250b78&oe=5E93F6F6" alt="ШПИНАТ 🌱">
+								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89385356_221989658951830_6343720088222175732_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=GMe974_gZiwAX8NruN5&oh=c4e8f1756fff8ef1edf903fdde45079d&oe=5EA125F6" alt="ШПИНАТ 🌱">
 							</div>
 							<div class="article-more__item-name">ШПИНАТ 🌱</div>
 						</a>
 							<a href="./posts/./luchshie-produkty-dlya-ukrepleniya.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>838</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>849</span>
 								</div>
 								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89370852_663509041142462_7354772907839365725_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=xmpS9JspDhcAX8Ltlzl&oh=707ee81b17cc91fd541d7d00c6c6c602&oe=5E9DBED4" alt="ЛУЧШИЕ ПРОДУКТЫ ДЛЯ УКРЕПЛЕНИЯ">
 							</div>
 							<div class="article-more__item-name">ЛУЧШИЕ ПРОДУКТЫ ДЛЯ УКРЕПЛЕНИЯ</div>
+						</a>
+							<a href="./posts/./dobavki-dlya-ukrepleniya-immunnoy.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>791</span>
+								</div>
+								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/88276315_1076110022751388_1273011832599512356_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=06mdn28iEZ4AX-jZRQG&oh=e661ccf8090fb8b31bedd53c3d8b6492&oe=5E9E06D1" alt="ДОБАВКИ ДЛЯ УКРЕПЛЕНИЯ ИММУННОЙ">
+							</div>
+							<div class="article-more__item-name">ДОБАВКИ ДЛЯ УКРЕПЛЕНИЯ ИММУННОЙ</div>
 						</a>
 						</div>
 				</div>
